@@ -1,3 +1,4 @@
+20121208 1.17 test.pl handles alsa_1.0.16 quirk
 20121129 1.16 test.pl prints better diagnostics if it fails
 20120930 1.15 output() timestamp and duration in floating-point seconds
 20120925      (dis)?connect(from|to) return undef if parse_address fails
